@@ -5,10 +5,12 @@ home=$tmp/home
 mkdir -p $home
 cvm=$tmp/cvm
 TCPLOCALIP=127.0.0.1
+TCPLOCALHOST=localhost
 TCPREMOTEIP=127.0.0.1
 LOGREQUESTS=1
 SOFTCHROOT=1
-export LOGREQUESTS TCPLOCALIP TCPREMOTEIP SOFTCHROOT
+CVM_RANDOM_BYTES=0
+export CVM_RANDOM_BYTES LOGREQUESTS TCPLOCALIP TCPLOCALHOST TCPREMOTEIP SOFTCHROOT
 
 env="env UID=$uid GID=$gid USER=ftp GROUP=ftp HOME=$home TZ=Canada/Saskatchewan"
 
